policies/grafana-enforce-dashboard-folder/tests/overlays/test03/generated/v1_configmap_grafana-enforce-dashboard-folder-vap-library-test-test03.yaml
apiVersion: v1
data:
  test: test
kind: ConfigMap
metadata:
  labels:
    grafana_dashboard: "1"
  name: grafana-enforce-dashboard-folder-vap-library-test-test03
  namespace: grafana-enforce-dashboard-folder-vap-library-test03
